cabal-version:      3.0
name:               r2-repro
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Bryan Richter
maintainer:         bryan@haskell.foundation
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable r2-repro
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base 
        , amazonka
        , amazonka-s3
        , bytestring
        , lens
        , text
    hs-source-dirs:   app
    default-language: Haskell2010
